<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/home_item" />
        <item
            android:id="@+id/nav_registro"
            android:icon="@drawable/ic_registro"
            android:title="@string/registro_item" />
        <item
            android:id="@+id/nav_listado"
            android:icon="@drawable/ic_listado"
            android:title="@string/listado_item" />
        <item
            android:id="@+id/nav_notificaciones"
            android:icon="@drawable/ic_notificacion"
            android:title="@string/notificaciones_item" />
        <item
            android:id="@+id/nav_rastreo"
            android:icon="@drawable/ic_ubicacion"
            android:title="@string/rastreo_item" />


        <!-- Sección de configuración -->
        <item
            android:id="@+id/configuration_section"
            android:title="@string/configuracion_item">
            <menu>

                <item
                    android:id="@+id/nav_bluetooth"
                    android:icon="@drawable/ic_bluetooth"
                    android:title="@string/Bluetooth_item" />

                <item
                    android:id="@+id/nav_cerrarsesion"
                    android:icon="@android:drawable/ic_lock_power_off"
                    android:title="@string/cerrarsesion_item" />
            </menu>
        </item>
    </group>

</menu>